<resources>
    <string name="app_name">PatientsPortal</string>
    <string name="menu">Menú</string>
    <string name="todo">TODO</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="cerrar">Cerrar</string>
    <string name="abrir">Abrir</string>
    <string name="buenas_noches">Buenas noches</string>
    <string name="buenas_tardes">Buenas tardes</string>
    <string name="buenos_dias">Buenos días</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="credencial">Credencial</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="perfil">Perfil</string>
    <string name="turnos">Turnos</string>
    <string name="reservar_turnos">Reservar turnos</string>
    <string name="mis_turnos_agendados">Mis turnos agendados</string>
    <string name="historial">Historial</string>
    <string name="guardia_virtual">Guardia virtual</string>
    <string name="controles_de_salud">Controles de salud</string>
    <string name="cartilla">Cartilla</string>
    <string name="comunidades">Comunidades</string>
    <string name="mis_medicos">Mis Médicos</string>
    <string name="mi_cobertura">Mi Cobertura</string>
    <string name="estudios">Estudios</string>
    <string name="peso_y_altura">Peso y Altura</string>
    <string name="temp">Temperatura</string>
    <string name="presion_arterial">Presión Arterial</string>
    <string name="frecuencia_cardiaca">Frecuencia cardíaca</string>
    <string name="disnea">Disnea</string>
    <string name="saturacion_de_oxigeno">Saturación de Oxígeno</string>
    <string name="frecuencia_respiratoria">Frecuencia Respiratoria</string>
    <string name="glucemia">Glucemia</string>
    <string name="ver_resultados">Ver resultados</string>
    <string name="estudios_solicitados">Estudios solicitados</string>
    <string name="preparacion_de_estudios">Preparación de Estudios</string>
    <string name="my_plan">Mi Plan</string>
    <string name="my_bills">Mis Facturas</string>
    <string name="travel_assistance">Asistencia en Viajes</string>
    <string name="dermatitis">Dermatitis Atópica</string>
    <string name="my_pregnancy">Mi Embarazo</string>
    <string name="especialties_and_proffessionals">Especialidades y Profesionales</string>
    <string name="por_fecha">Por fecha</string>
    <string name="documentos_clinicos">Documentos Clinicos</string>
    <string name="por_documento">Por documento</string>
    <string name="mi_diario">Mi Diario</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="ayuda">Ayuda</string>
    <string name="portal_de_pacientes">Portal de Pacientes</string>
    <string name="n_mero">Número</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="ver_mi_perfil">Ver mi perfil</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="documento">Documento</string>
    <string name="sexo">Sexo</string>
    <string name="volver_atras">Volver atras</string>
    <string name="mis_datos_personales">Mis datos personales</string>
    <string name="sin_receta">Sin receta</string>
    <string name="con_receta">Con receta</string>
    <string name="agregar_nueva_cobertura">Agregar nueva cobertura</string>
    <string name="tambi_n_pod_s_modificar_los_datos_del_plan_o_agregar_alguna_otra_cobertura">También podés modificar los datos del plan o agregar alguna otra cobertura</string>
    <string name="seleccionar_cobertura">Seleccionar Cobertura</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="nueva_cobertura">Nueva Cobertura</string>
    <string name="ingres_los_datos_de_tu_nueva_cobertura">Ingresá los datos de tu nueva cobertura</string>
    <string name="cobertura">Cobertura</string>
    <string name="buscar_profesional">Buscar profesional</string>
    <string name="ejemplo_plan_de_salud_hiba">Ejemplo: Plan de Salud HIBA</string>
    <string name="n_mero_de_socio">Número de Socio</string>
    <string name="tipo_de_plan">Tipo de plan</string>
    <string name="cancelar">Cancelar</string>
    <string name="cargar_foto_credencial">Cargar foto credencial</string>
    <string name="guardar_cobertura">Guardar cobertura</string>
    <string name="editar_cobertura">Editar cobertura</string>
    <string name="vacaciones_2022_2023">Vacaciones 2022-2023</string>
    <string name="first_part_trip_fragment_text">¡Hola! Nos comunicamos para brindarle información de utilidad para sus próximas vacaciones.\n\nLo acompañamos en la planificación de su viaje. ofreciéndole información actualizada sobre la cobertura que el Plan de Salud otorga fuera del AMBA.\n\nComo es de su conocimiento, el Plan de Salud del Hospital Italiano no contempla la libre elección de prestadores, por lo que antes de su viaje le sugerimos consultar nuestra cartilla para identificar los prestadores más cercanos a su destino (ver detalle al finalizar este documento).\n\n En los prestadores indicados, tendrá cobertura en caso de accidente, emergencia o reagudización de una enfermedad crónica.\n\nSi el destino de su viaje es a una ciudad que se encuentra a más de 50 km de su domicilio de facturación y donde no existe prestador de cartilla (ver al final), tendrá cobertura sólo ante casos de accidentes y/o emergencias por el servicio de Asistencia al Viajero de Universal Assistance (UA).\n\n El servicio de Asistencia al Viajero con el que cuentan todos los afiliados no cubre enfermedades crónicas (preexistencias). El tope de cobertura asciende a los $39.000 y se extiende por 60 días desde el inicio del viaje (odontología ver abajo).\n\n Recuerde que para acceder a esta cobertura deberá realizar la denuncia de la contingencia por vía telefónica ante Universal Assistance en las primeras 24 hs. de ocurrido el evento médico o accidente (teléfonos 0800-9996400 / (011)4323-7777). La auditoría médica podrá determinar el prestador más adecuado para la atención del caso, que podrá ser en la misma o en otra ciudad.\n\n Odontología de urgencia: si se encuentra fuera del AMBA y a más de 50 km de su domicilio de facturación, la cobertura de urgencias odontológicas siempre se realizará a través de Universal Assistance con un tope de $2500 hasta 60 días de iniciado el viaje.\n\n Es importante que Ud. registre su viaje y de los afiliados de Plan de Salud que viajan con Ud., haciendo click en el siguiente link donde además le remitirán por correo electrónico el o los certificados de cobertura.\n\n Si desea ampliar su cobertura nacional puede hacerlo desde el mismo link o, si planea hacer viajes con cruce de frontera, ya que la cobertura básica se limita a la Argentina. Los afiliados de Plan de Salud tendrán una bonificación del 20%.</string>
    <string name="declara_tu_viaje_y_o_amplia_tu_cobertura"><a href="https://www.universal-assistance.com/ar-es/hospital-italiano?utm_source=hospital_Italiano_ar_affinity&amp;utm_medium=referral&amp;utm_campaign=lp_hospital_italiano_arg">DECLARA TU VIAJE Y/O AMPLIA TU COBERTURA</a></string>
    <string name="recetado_por">Recetado por:</string>
    <string name="doctorlist">DoctorList</string>
    <string name="prescriptionlist">PrescriptionList</string>
    <string name="containerid_tag">ContainerID</string>
    <string name="title_tag">title</string>
    <string name="tabtitles_tag">tabTitles</string>
    <string name="task_tag">task</string>
    <string name="buscar_por_medicamento_marca_o_profesional_que_recet">Buscar por medicamento, marca, o profesional que recetó</string>
    <string name="no_hay_registros">No hay registros</string>
    <string name="por_tipo_de_estudio">Por tipo de estudio</string>
    <string name="twopagesfragment_tag">TwoPagesFragment</string>
    <string name="see_medical_test_title">Resultados de estudios</string>
    <string name="coveragesfragment_tag">CoveragesFragment</string>
    <string name="my_coverages_title">Mis Coberturas</string>
    <string name="my_bills_title">Mis Facturas</string>
    <string name="por_per_odo">Por período</string>
    <string name="por_tipo_de_factura">Por tipo de factura</string>
    <string name="tripadvicefragment_tag">TripAdviceFragment</string>
    <string name="trip_title">Viajes</string>
    <string name="searchandlistfragment_tag">SearchAndListFragment</string>
    <string name="provider_directory_title">Especialidades/Profesionales</string>
    <string name="especialidad">Especialidad</string>
    <string name="profesional">Profesional</string>
    <string name="requested_medical_tests_title">Estudios Solicitados</string>
    <string name="detalle_del_estudio">Detalle del Estudio</string>
    <string name="compartir_enlace">Compartir enlace</string>
    <string name="requestedpatienttestlist_tag">RequestedPatientTestList</string>
    <string name="patienttestlist_tag">PatientTestList</string>
    <string name="arewelookingfordate">areWeLookingForDate</string>
    <string name="clinicdocumentslist_tag">ClinicDocumentsList</string>
    <string name="billslist_tag">BillsList</string>
    <string name="link_tag">link</string>
    <string name="medicaltestresultdisplayer">MedicalTestResultDisplayer</string>
    <string name="subir_nuevo_estudio">Subir nuevo estudio</string>
    <string name="newmedicaltestfragment_tag">NewMedicalTestFragment</string>
    <string name="ingres_los_datos_del_estudio">Ingresá los datos del estudio</string>
    <string name="guardar_estudio">Guardar estudio</string>
    <string name="fecha_del_estudio">Fecha del estudio</string>
    <string name="fecha">Fecha</string>
    <string name="tipo_de_estudio">Tipo de estudio</string>
    <string name="observaciones">Observaciones</string>
    <string name="guardar">Guardar</string>
    <string name="agregar_nueva_tarjeta_de_cr_dito">Agregar nueva tarjeta de crédito</string>
    <string name="nueva_tarjeta_visa">Nueva tarjeta VISA</string>
    <string name="nueva_tarjeta_mastercard">Nueva tarjeta Mastercard</string>
    <string name="nueva_tarjeta_american_express">Nueva tarjeta American Express</string>
    <string name="confirmar_compra">Confirmar compra</string>
    <string name="n_mero_documento">Número documento</string>
    <string name="nro_documento">Nro. documento</string>
    <string name="tipo_doc">Tipo doc.</string>
    <string name="dni">DNI</string>
    <string name="n_meros">Números</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="vencimiento">Vencimiento</string>
    <string name="sin_espacios_ni_guiones">Sin espacios ni guiones</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="como_figura_en_la_tarjeta">Como figura en la tarjeta</string>
    <string name="titular_de_la_tarjeta">Titular de la tarjeta</string>
    <string name="guardar_tarjeta">Guardar tarjeta</string>
    <string name="cambiar_fecha">Cambiar fecha</string>
    <string name="elige_la_nueva_fecha">Elige la nueva fecha</string>
    <string name="informaci_n">Información</string>
    <string name="cronometrar_tus_contracciones">Cronometrar tus contracciones</string>
    <string name="info_contractions_deployed">Para comenzar a utilizar el cronómetro hacé click en EMPIEZA LA CONTRACCIÓN cada vez que comienza la contracción y TERMINA LA CONTRACCIÓN cada vez que finaliza la misma. Ante cualquier duda, consultá con tu obstetra. La calculadora sólo permite el registro momentáneo de las contracciones, no alerta al sistema de salud.</string>
    <string name="ingres_la_nueva_fecha_probable_de_parto">Ingresá la nueva fecha probable de parto</string>
</resources>