<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbarInfoContractions"
        android:background="@color/blue"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_clear_24"
            android:id="@+id/btnClose"
            android:layout_height="wrap_content"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/informaci_n"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbarInfoContractions"
        android:layout_margin="24dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/tvTitle"
        android:text="@string/cronometrar_tus_contracciones"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_below="@id/tvTitle"
        android:layout_margin="24dp"
        android:textColor="@color/black"
        android:text="@string/info_contractions_deployed"
        android:layout_height="wrap_content"
        tools:ignore="VisualLintLongText" />

</RelativeLayout>