<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="4dp"
        android:id="@+id/cvTitle"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/cambiar_fecha"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:text="@string/cerrar"
            android:textAllCaps="true"
            android:padding="16dp"
            android:id="@+id/btnClose"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/ingres_la_nueva_fecha_probable_de_parto"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        android:id="@+id/tvSubTitle"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etNewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@null"
        android:focusable="false"
        android:hint="@string/elige_la_nueva_fecha"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="24dp" />

    <ImageView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/etNewDate"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/divider_horizontal_bright"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/miniCardsConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_height="48dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:id="@+id/btnCancel"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/gray"
            android:layout_margin="4dp"
            app:strokeWidth="0.4dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/cancelar"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:layout_height="wrap_content" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            app:strokeColor="@color/gray"
            app:cardBackgroundColor="@color/blue"
            android:id="@+id/btnSave"
            android:layout_margin="4dp"
            app:strokeWidth="0.4dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/guardar"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>